--- a/App.config
+++ b/App.config
@@ -17,7 +17,7 @@
     <add key="msconnectionstring" value=""/>
     
     <!-- Key für Domain-->
-    <add key="domain" value="uebungsfirma.at"/>
+    <add key="domain" value=""/>
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
