--- a/ADUser.csproj
+++ b/ADUser.csproj
@@ -51,8 +51,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>
-    </StartupObject>
+    <StartupObject>ADUser.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>BC04A5F42439028202DC72C53A04BBFEB92ED996</ManifestCertificateThumbprint>
